# app/Models/User.php
@@ -1,45 +1,32 @@
 <?php
-
 namespace App\Models;
-
-// use Illuminate\Contracts\Auth\MustVerifyEmail;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
-use Illuminate\Foundation\Auth\User as Authenticatable;
-use Illuminate\Notifications\Notifiable;
-use Laravel\Sanctum\HasApiTokens;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Support\Facades\DB;
 
-class User extends Authenticatable
+class User extends Model
 {
-    use HasApiTokens, HasFactory, Notifiable;
+    use HasFactory;
+    protected $table = 'users';
 
-    /**
-     * The attributes that are mass assignable.
-     *
-     * @var array<int, string>
-     */
-    protected $fillable = [
-        'name',
-        'email',
-        'password',
-    ];
-
-    /**
-     * The attributes that should be hidden for serialization.
-     *
-     * @var array<int, string>
-     */
-    protected $hidden = [
-        'password',
-        'remember_token',
-    ];
-
-    /**
-     * The attributes that should be cast.
-     *
-     * @var array<string, string>
-     */
-    protected $casts = [
-        'email_verified_at' => 'datetime',
-        'password' => 'hashed',
-    ];
+    public function getAllUser(){
+        $users=DB::table('users')->get();
+        return $users;
+    }
+    public function addUser($data){
+        $addUser=DB::table('users')->insert($data);
+        return $addUser;
+    }
+    public function showUser($id){
+        $getUser=DB::table('users')->where('id',$id)->get();
+        return $getUser;
+    }
+    public function updateUser($id, $data){
+        $updateUser=DB::table('users')->where('id', $id)->update($data);
+        return $updateUser;
+    }
+    public function delele($id){
+        $destroyUser= DB::table('users')->where('id', $id)->delete();
+        return $destroyUser;
+    }
 }
